--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>Hi! This is Jingyan!</p>
-<p> 
+<p>NTU Bachelor/NUS Master</p>
+<p>Go/Python/C++</p>
+<p>How to reach me:</p> <ul><li> <a href="wujingyan783@gmail.com"></a>li></li><ul>
+<p>Experiences:</p>
+<p>Research Intern of A*Star Institute for Infocomm Research  (from 2023-01 to 2023-04).</p>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
