--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>Hi! This is Jingyan!</p>
-<p>NTU Bachelor/NUS Master</p>
-<p>Go/Python/C++</p>
-<p>How to reach me:</p> <ul><li><a href="wujingyan783@gmail.com"></li><ul>
+<p>Who I am: NTU Bachelor/NUS Master</p>
+<p>What skills I possess: Go/Python/C++</p>
+<p>How to reach me:<ul><li><a href="wujingyan783@gmail.com"></li><ul>https://jingyannnn.github.io/
 <p>Experiences:</p>
 <p>Research Intern of A*Star Institute for Infocomm Research  (from 2023-01 to 2023-04).</p>
 
